--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,7 +10,7 @@ amazon:
   service: S3,
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>,
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'],
-  region: eu-west-3
+  region: eu-west-3,
   bucket: fellowmap
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
