--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -48,9 +48,13 @@ default: &default
     - .jpeg
     - .jpg
 
-development:
-  <<: *default
-  compile: true
+  development:
+    <<: *default
+    compile: true
+
+  staging:
+    <<: *default
+    compile: true
 
   # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
   check_yarn_integrity: true
