--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,9 +7,9 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 amazon:
-  service: S3,
+  service: S3
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY']
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   region: eu-west-3
   bucket: fellowmap
 
